--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <html lang="en"> 
 
 <head>
- 
-  <meta charset="utf-8">
+  
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <title>Marketing</title>
   
@@ -19,7 +20,7 @@
   <!-- This meta tag is used for mobile device to display the page without any zooming,
        so how much the device is able to fit on the screen is what's shown initially. 
        Remove comments from this tag, when you want to apply media queries to the website. -->
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- To adhear no-cache for Chrome -->
 <!--   <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate" />
