added hamburger div

--- a/index.html
+++ b/index.html
@@ -50,14 +50,16 @@
     <!--header section start-->
     <header>
       <div class="wrapper">
-        <nav>
-          <ul class="menu-list">
-            <li class="menu"><a href="#FIXME" title="Home">Home</a></li>
-            <li class="menu"><a href="#FIXME" title="Plans">Plans</a></li>
-            <li class="menu"><a href="#FIXME" title="About">About</a></li>
-            <li class="menu"><a href="#FIXME" title="Contact">Contact</a></li>
-          </ul>
-        </nav>
+        <div class="hamburger">
+          <nav>
+            <ul class="menu-list">
+              <li class="menu"><a href="#FIXME" title="Home">Home</a></li>
+              <li class="menu"><a href="#FIXME" title="Plans">Plans</a></li>
+              <li class="menu"><a href="#FIXME" title="About">About</a></li>
+              <li class="menu"><a href="#FIXME" title="Contact">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
         <div class="main-title">
           <h1><a href="./index.html" title="Marketing">MARKETING</a></h1>
           <span class="template-by">Template by <a href="#FIXME" target="_blank" title="w3.css">w3.css</a></span>
