--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     <!--header section start-->
     <header>
       <div class="wrapper">
-        <div class="hamburger">
+        <div class="menu">
+          <a href="#FIXME" title="hamburger" class="hamburger">hamburger</a>
           <nav>
             <ul class="menu-list">
               <li class="menu"><a href="#FIXME" title="Home">Home</a></li>
