make heading common class

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
       <section class="what-we-offer">
         <div class="wrapper">
-          <h2>What We Offer</h2>
+          <h2 class="section-heading underline">What We Offer</h2>
           <ul class="offer-box">
             <li class="Design">
               <h3>Design</h3>
@@ -128,7 +128,7 @@
       </section>
       <section class="pricing-plans">
         <div class="wrapper">
-          <h3>Pricing Plans</h3>
+          <h3 class="section-heading">Pricing Plans</h3>
           <p>Choose a pricing plan that fits your needs.</p>
           <ul class="outter-box">
             <li class="inner-box">
@@ -175,7 +175,7 @@
       </section>
       <section class="who-we-are">
         <div class="wrapper">
-          <h4>Who We Are</h4>
+          <h4 class="section-heading underline">Who We Are</h4>
           <ul class="outter-box">
             <li class="inner-box">
               <figure>
@@ -215,7 +215,7 @@
       </section>
       <section class="contact-us">
         <div class="wrapper">
-          <h5>Contact Us</h5>
+          <h5 class="section-heading underline">Contact Us</h5>
           <form action="#FIXME" method="post">
             <div class="form-group">
               <label for="name">Name</label>
