added to top button id

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <body>
   <!--container start-->
-  <div class="container">
+  <div class="container" id="to-top">
     <!--header section start-->
     <header>
       <div class="wrapper">
@@ -246,7 +246,7 @@
     <footer>      
       <div class="wrapper">
         <h6>Footer</h6>
-        <a href="#FIXME" class="rocket-button" title="To The Top">To the top</a>
+        <a href="#to-top" class="rocket-button" title="To The Top">To the top</a>
         <ul class="social-links">
           <li class="social-icon"><a href="#FIXME" target="_blank" title="Facebook">facebook</a></li>
           <li class="social-icon"><a href="#FIXME" target="_blank" title="Instagram">instagram</a></li>
