--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </nav>
         </div>
         <div class="main-title">
-          <h1><a href="./index.html" title="Marketing">MARKETING</a></h1>
+          <h1><a href="./index.html" class="header-logo" title="Marketing">MARKETING</a></h1>
           <span class="template-by">Template by <a href="#FIXME" target="_blank" title="w3.css">w3.css</a></span>
         </div>
       </div>
