changes slider action class

--- a/index.html
+++ b/index.html
@@ -93,13 +93,23 @@
             </li>
           </ul>
           <ul class="slider-action">
-            <li><a href="#FIXME" class="previous-button" title="Previous Slide">prev</a></li>
+            <li>
+              <a href="#FIXME" class="previous-button" title="Previous Slide">prev</a>
+            </li>
+            <li>
+              <a href="#FIXME" class="next-button" title="Next Slide">next</a>
+            </li>
+          </ul>
+          <ul class="slider-dot">
             <li>
               <a href="#FIXME" class="dot" title="First Slide">dot</a>
+            </li>
+            <li>
               <a href="#FIXME" class="dot" title="Second Slide">dot</a>
+            </li>
+            <li>
               <a href="#FIXME" class="dot slide-active" title="Third Slide">dot</a>
             </li>
-            <li><a href="#FIXME" class="next-button" title="Next Slide">next</a></li>
           </ul>
         </div>
       </div>
