--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <li><span class="bold">10</span> <span>Emails</span></li>
                 <li><span class="bold">10</span> <span>Domains</span></li>
                 <li><span class="bold">Endless</span> <span>Support</span></li>
-                <li><span class="plans-price">$ 10</span> <span>per month</span></li>
+                <li><span class="plans-price">$ 10</span> <span class="per-month">per month</span></li>
                 <li><a href="#FIXME" class="signup-button" title="Sign Up">Sign Up</a></li>
               </ul>
             </li>
@@ -163,7 +163,7 @@
                 <li><span class="bold">25</span> <span>Emails</span></li>
                 <li><span class="bold">25</span> <span>Domains</span></li>
                 <li><span class="bold">Endless</span> <span>Support</span></li>
-                <li><span class="plans-price">$ 25</span> <span>per month</span></li>
+                <li><span class="plans-price">$ 25</span> <span class="per-month">per month</span></li>
                 <li><a href="#FIXME" class="signup-button" title="Sign Up">Sign Up</a></li>
               </ul>
             </li>
@@ -176,7 +176,7 @@
                 <li><span class="bold">50</span> <span>Emails</span></li>
                 <li><span class="bold">50</span> <span>Domains</span></li>
                 <li><span class="bold">Endless</span> <span>Support</span></li>
-                <li><span class="plans-price">$ 50</span> <span>per month</span></li>
+                <li><span class="plans-price">$ 50</span> <span class="per-month">per month</span></li>
                 <li><a href="#FIXME" class="signup-button" title="Sign Up">Sign Up</a></li>
               </ul>
             </li>
