--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="main-title">
           <h1><a href="./index.html" class="header-logo" title="Marketing">MARKETING</a></h1>
-          <span class="template-by">Template by <a href="#FIXME" target="_blank" title="w3.css">w3.css</a></span>
+          <span class="template-by medium-font">Template by <a href="#FIXME" target="_blank" title="w3.css">w3.css</a></span>
         </div>
       </div>
     </header>
@@ -114,12 +114,12 @@
         </div>
       </div>
       <section class="what-we-offer">
-        <div class="wrapper">
+        <div class="wrapper wrapper-modified">
           <h2 class="section-heading underline">What We Offer</h2>
           <ul class="offer-box">
             <li class="Design">
               <h3>Design</h3>
-              <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+              <p class="medium-font">Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
             </li>
             <li class="Branding">
               <h3>Branding</h3>
@@ -137,20 +137,20 @@
         </div>
       </section>
       <section class="pricing-plans">
-        <div class="wrapper">
+        <div class="wrapper wrapper-modified">
           <h3 class="section-heading">Pricing Plans</h3>
-          <p>Choose a pricing plan that fits your needs.</p>
+          <p class="small-font">Choose a pricing plan that fits your needs.</p>
           <ul class="outter-box">
             <li class="inner-box">
               <ul class="price-card">
                 <li>
                   <h4>Basic</h4>
                 </li>
-                <li><span class="bold">10GB</span> <span>Storage</span></li>
-                <li><span class="bold">10</span> <span>Emails</span></li>
-                <li><span class="bold">10</span> <span>Domains</span></li>
-                <li><span class="bold">Endless</span> <span>Support</span></li>
-                <li><span class="plans-price">$ 10</span> <span class="per-month">per month</span></li>
+                <li class="small-font"><span class="bold">10GB</span> <span>Storage</span></li>
+                <li class="small-font"><span class="bold">10</span> <span>Emails</span></li>
+                <li class="small-font"><span class="bold">10</span> <span>Domains</span></li>
+                <li class="small-font"><span class="bold">Endless</span> <span>Support</span></li>
+                <li class="small-font"><span class="plans-price">$ 10</span> <span class="per-month">per month</span></li>
                 <li><a href="#FIXME" class="signup-button" title="Sign Up">Sign Up</a></li>
               </ul>
             </li>
@@ -159,11 +159,11 @@
                 <li class="price-pro">
                   <h4>Pro</h4>
                 </li>
-                <li><span class="bold">25GB</span> <span>Storage</span></li>
-                <li><span class="bold">25</span> <span>Emails</span></li>
-                <li><span class="bold">25</span> <span>Domains</span></li>
-                <li><span class="bold">Endless</span> <span>Support</span></li>
-                <li><span class="plans-price">$ 25</span> <span class="per-month">per month</span></li>
+                <li class="small-font"><span class="bold">25GB</span> <span>Storage</span></li>
+                <li class="small-font"><span class="bold">25</span> <span>Emails</span></li>
+                <li class="small-font"><span class="bold">25</span> <span>Domains</span></li>
+                <li class="small-font"><span class="bold">Endless</span> <span>Support</span></li>
+                <li class="small-font"><span class="plans-price">$ 25</span> <span class="per-month">per month</span></li>
                 <li><a href="#FIXME" class="signup-button" title="Sign Up">Sign Up</a></li>
               </ul>
             </li>
@@ -172,11 +172,11 @@
                 <li>
                   <h4>Premium</h4>
                 </li>
-                <li><span class="bold">50GB</span> <span>Storage</span></li>
-                <li><span class="bold">50</span> <span>Emails</span></li>
-                <li><span class="bold">50</span> <span>Domains</span></li>
-                <li><span class="bold">Endless</span> <span>Support</span></li>
-                <li><span class="plans-price">$ 50</span> <span class="per-month">per month</span></li>
+                <li class="small-font"><span class="bold">50GB</span> <span>Storage</span></li>
+                <li class="small-font"><span class="bold">50</span> <span>Emails</span></li>
+                <li class="small-font"><span class="bold">50</span> <span>Domains</span></li>
+                <li class="small-font"><span class="bold">Endless</span> <span>Support</span></li>
+                <li class="small-font"><span class="plans-price">$ 50</span> <span class="per-month">per month</span></li>
                 <li><a href="#FIXME" class="signup-button" title="Sign Up">Sign Up</a></li>
               </ul>
             </li>
@@ -184,7 +184,7 @@
         </div>
       </section>
       <section class="who-we-are">
-        <div class="wrapper">
+        <div class="wrapper wrapper-modified">
           <h4 class="section-heading underline">Who We Are</h4>
           <ul class="outter-box">
             <li class="inner-box">
@@ -194,8 +194,8 @@
               <div class="content">
                 <h5>Jane Doe</h5>
                 <span>CEO & Founder</span>
-                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-                <a href="#FIXME" class="contact-button" target="_blank" title="Contact">Contact</a>
+                <p class="small-font">Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                <a href="#FIXME" class="contact-button small-font" target="_blank" title="Contact">Contact</a>
               </div>
             </li>
             <li class="inner-box">
@@ -205,7 +205,7 @@
               <div class="content">
                 <h5>Mike Ross</h5>
                 <span>Art Director</span>
-                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                <p class="small-font">Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
                 <a href="#FIXME" class="contact-button" target="_blank" title="Contact">Contact</a>
               </div>
             </li>
@@ -216,7 +216,7 @@
               <div class="content">
                 <h5>John Doe</h5>
                 <span>Designer</span>
-                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                <p class="small-font">Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
                 <a href="#FIXME" class="contact-button" target="_blank" title="Contact">Contact</a>
               </div>
             </li>
@@ -224,27 +224,27 @@
         </div>
       </section>
       <section class="contact-us">
-        <div class="wrapper">
+        <div class="wrapper wrapper-modified">
           <h5 class="section-heading underline">Contact Us</h5>
           <form action="#FIXME" method="post">
             <div class="form-group">
-              <label for="name">Name</label>
+              <label for="name" class="medium-font">Name</label>
               <input type="text" id="name" name="name" class="form-content">
             </div>
             <div class="form-group">
-              <label for="email">Email</label>
+              <label for="email" class="medium-font">Email</label>
               <input type="text" id="email" name="email" class="form-content">
             </div>
             <div class="form-group">
-              <label for="subject">Subject</label>
+              <label for="subject" class="medium-font">Subject</label>
               <input type="text" id="subject" name="subject" class="form-content">
             </div>
             <div class="form-group">
-              <label for="message">Message</label>
+              <label for="message" class="medium-font">Message</label>
               <input type="text" id="message" name="message" class="form-content">
             </div>
             <div class="form-group">
-              <input type="submit" class="send-button" name="send" value="Send">
+              <input type="submit" class="send-button small-font" name="send" value="Send">
             </div>
           </form>
         </div>
@@ -265,7 +265,7 @@
           <li class="social-icon"><a href="#FIXME" target="_blank" title="Twitter">twitter</a></li>
           <li class="social-icon"><a href="#FIXME" target="_blank" title="Linkedin">linkedin</a></li>
         </ul>
-        <p><span>Powered by</span> <a href="#FIXME" target="_blank" title="w3.css">w3.css</a></p>
+        <p class="small-font"><span>Powered by</span> <a href="#FIXME" target="_blank" title="w3.css">w3.css</a></p>
       </div>
     </footer>
     <!--footer section end-->
