changes in hamburger structure

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!--header section start-->
     <header>
       <div class="wrapper">
-        <div class="menu">
+        <div class="nav-menu">
           <a href="#FIXME" title="hamburger" class="hamburger">hamburger</a>
           <nav>
             <ul class="menu-list">
